# digitization

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cli.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: default-issue-template.md  digitization-issue-template.md
.github/workflows/: build.yml
digitization/: cli.py
digitization/file_import/: README.md  file_import.py  utils.py
digitization/xml_collect/: README.md  utils.py  xml_collect.py
file_import/: file_import.py
refactory/: README.md  cli.py  main.py  storage_connection.py  test_connections.py  utils.py  validate_pdf.py
refactory/check_files/: main.py  utils.py
refactory/file_import/: boite_matcher.py  utils.py  xml_exporter.py
scripts/: double_check_pdfs.py  rename_pdf_to_latex.sh
xml_collect/: xml_collect.py
